force-app/main/default/objects/Opportunity/fields/CommentDetails__c.field-meta.xml
<CustomField>
    <fullName>CommentDetails__c</fullName>
    <description>Type additional information to describe the opportunity, such as possible products to sell or past purchases from the customer.</description>
    <label>Comment/Details</label>
    <type>TextArea</type>
</CustomField>