force-app/main/default/objects/Opportunity/fields/CompleteInternalReview__c.field-meta.xml
<CustomField>
    <fullName>CompleteInternalReview__c</fullName>
    <description>Identifies if the internal review of the opportunity is completed before the quote is presented</description>
    <label>Complete Internal Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>