force-app/main/default/objects/Opportunity/fields/ContractedVolume__c.field-meta.xml
<CustomField>
    <fullName>ContractedVolume__c</fullName>
    <description>Reflects the total potential fuel volume in the quote (under negotiation to be contracted)</description>
    <formula>TotalPotentialFuelVolume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>