force-app/main/default/objects/Opportunity/fields/CustomerNeed__c.field-meta.xml
<CustomField>
    <fullName>CustomerNeed__c</fullName>
    <description>Type some notes about the customer&apos;s requirements, to help the sales team identify products and services that could meet their requirements.</description>
    <label>Customer Need</label>
    <type>TextArea</type>
</CustomField>