force-app/main/default/objects/Opportunity/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Details of the Status Reason</description>
    <label>Details</label>
    <type>TextArea</type>
</CustomField>