force-app/main/default/objects/Opportunity/fields/NrOfVehicles__c.field-meta.xml
<CustomField>
    <fullName>NrOfVehicles__c</fullName>
    <description>Number of vehicles the customer has, identified in the account details</description>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nr of Vehicles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>