force-app/main/default/objects/Opportunity/fields/OpportunityCategory__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCategory__c</fullName>
    <description>Choose between opportunity for bulk or cards</description>
    <label>Opportunity Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Cards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>