force-app/main/default/objects/Opportunity/fields/PotentialDieselvolumekLy__c.field-meta.xml
<CustomField>
    <fullName>PotentialDieselvolumekLy__c</fullName>
    <description>A minimum volume of diesel or gasoline should be inserted/edited by CARD sales persons.</description>
    <label>Potential Diesel volume [kL/y]</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>