force-app/main/default/objects/Opportunity/fields/PresentProposal__c.field-meta.xml
<CustomField>
    <fullName>PresentProposal__c</fullName>
    <description>Identifies in the opportunity if the quote associated is already presented to the customer</description>
    <label>Present Proposal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>