force-app/main/default/objects/Opportunity/fields/ProposedSolution__c.field-meta.xml
<CustomField>
    <fullName>ProposedSolution__c</fullName>
    <description>Type notes about the proposed solution for the opportunity.</description>
    <label>Proposed Solution</label>
    <type>TextArea</type>
</CustomField>