force-app/main/default/objects/Opportunity/fields/PurchaseProcess__c.field-meta.xml
<CustomField>
    <fullName>PurchaseProcess__c</fullName>
    <description>Choose whether an individual or a committee will be involved in the purchase process for the lead.</description>
    <label>Purchase Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Committee</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>