force-app/main/default/objects/Opportunity/fields/PurchaseTimeFrame__c.field-meta.xml
<CustomField>
    <fullName>PurchaseTimeFrame__c</fullName>
    <description>Choose how long the lead will likely take to make the purchase.</description>
    <label>Purchase Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>This Quarter</fullName>
            </value>
            <value>
                <fullName>Next Quarter</fullName>
            </value>
            <value>
                <fullName>This Year</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>