force-app/main/default/objects/Opportunity/fields/RemainingDaysToClose__c.field-meta.xml
<CustomField>
    <fullName>RemainingDaysToClose__c</fullName>
    <description>Target Date for Closure - Today</description>
    <formula>TargetDateofClosure__c  - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining days to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>