force-app/main/default/objects/Opportunity/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <description>Reason For the Stage Closer Won or Close Lost</description>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fuel price</fullName>
            </value>
            <value>
                <fullName>VAS discount</fullName>
            </value>
            <value>
                <fullName>Payment term</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Other + specify details mandatory</fullName>
                <isActive>false</isActive>
                <label>Other + specify details mandatory</label>
            </value>
            <value>
                <fullName>Services + specify details mandatory</fullName>
                <isActive>false</isActive>
                <label>Services + specify details mandatory</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>