force-app/main/default/objects/Opportunity/fields/TargetDateofClosure__c.field-meta.xml
<CustomField>
    <fullName>TargetDateofClosure__c</fullName>
    <defaultValue>ADDMONTHS(TODAY(), 3)</defaultValue>
    <description>Enter the expected closing date of the opportunity to help make accurate revenue forecasts.</description>
    <label>Target Date of Closure</label>
    <type>Date</type>
</CustomField>