force-app/main/default/objects/Opportunity/fields/TotalIncrementalRevenue__c.field-meta.xml
<CustomField>
    <fullName>TotalIncrementalRevenue__c</fullName>
    <description>Value of the opportunity for Services, annual</description>
    <label>Total Incremental Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>