force-app/main/default/objects/Opportunity/fields/TotalPotentialFuelVolume__c.field-meta.xml
<CustomField>
    <fullName>TotalPotentialFuelVolume__c</fullName>
    <description>This filed is either mapped from the lead or manual input based on the Potential Diesel volume [kL/y] and Potential Gasoline volume [kL/y] . The value is a sum of potential diesel and gasoline volumes.</description>
    <formula>PotentialDieselvolumekLy__c +  PotentialGasolinevolumekLy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Potential Fuel Volume [kL/Y]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>