force-app/main/default/objects/Opportunity/recordTypes/CEPOpportunity.recordType-meta.xml
<RecordType>
    <fullName>CEPOpportunity</fullName>
    <active>true</active>
    <businessProcess>Opportunity Process</businessProcess>
    <label>CEP Cards Opportunity</label>
</RecordType>