force-app/main/default/objects/Opportunity/recordTypes/FPS_Bor_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>FPS_Bor_Opportunity</fullName>
    <active>true</active>
    <businessProcess>FPS Bor Sales Process</businessProcess>
    <description>Opportunity record type that targets FPS Borealis POC Opportunities</description>
    <label>FPS Bor Opportunity</label>
</RecordType>