force-app/main/default/objects/Opportunity/validationRules/Details_Mandatory_Reason_Service_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Details_Mandatory_Reason_Service_Other</fullName>
    <active>false</active>
    <description>Details is Mandatory when Status Reason is Service or Other</description>
    <errorConditionFormula>AND(
				 Not($Setup.CEPSkipValidationRules__c.Opportunity__c ),
				OR(
								ISPICKVAL(Status_Reason__c, &apos;Other&apos;),
								ISPICKVAL(Status_Reason__c, &apos;Services&apos;)
				),
				ISBLANK( CommentDetails__c)
)</errorConditionFormula>
    <errorMessage>Please provide details to the selected category</errorMessage>
</ValidationRule>