force-app/main/default/objects/Opportunity/validationRules/Status_Reason_Mandatory_Close_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Reason_Mandatory_Close_Lost</fullName>
    <active>true</active>
    <description>Status Reason is Mandatory when the Stage is Close Lost</description>
    <errorConditionFormula>AND(  
				Not($Setup.CEPSkipValidationRules__c.Opportunity__c ),
						
										
				      
										ISPICKVAL(StageName, &apos;Closed Lost&apos;),
										
					  	 ISBLANK(  TEXT(Status_Reason__c)) 
				)</errorConditionFormula>
    <errorMessage>Please provide reason for the selected status</errorMessage>
</ValidationRule>