force-app/main/default/objects/Opportunity/listViews/MyOpenOpportunitiesInStageQualification.listView-meta.xml
<ListView>
    <fullName>MyOpenOpportunitiesInStageQualification</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>TotalPotentialFuelVolume__c</columns>
    <columns>TargetDateofClosure__c</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>NrOfVehicles__c</columns>
    <columns>CustomerSegment__c</columns>
    <columns>ContractedVolume__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Qualification</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My opportunities in Qualification</label>
</ListView>